--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ main{
 
 .img-fondo{
     position: fixed;
-    z-index: 100;
+    z-index: -1;
 }
 
 #im-1{
@@ -73,7 +73,7 @@ input{
     width: 350px;
 }
 
-#input2{
+#respuestas{
     background-color: #7EE8FA;
 }
 
@@ -88,4 +88,38 @@ input{
     width: 100px;
     height: auto;
 
+}
+
+.contenedor-tarjetas{
+    height:57vh;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 80px;
+    margin-right: 80px;
+    padding-left: 90px;
+    gap: 15px;
+}
+
+.tarjeta{
+    background-color: #C2F261;
+    width: 200px;
+    height: 130px;
+    border-radius: 25px;
+    padding: 10px;
+    margin: 0;
+    text-align: center;
+    align-content: center;
+    overflow: scroll;
+}
+
+::-webkit-scrollbar{
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: none;
+}
+
+::-webkit-scrollbar-corner{
+    background: none;
 }
