--- a/style.css
+++ b/style.css
@@ -41,11 +41,12 @@ h1{
     width: 500px;
     height: 50px;
     margin-top: 20px;
+    
 }
 
 h3{
     text-align: center;
-    font-family: "Maven Pro", sans-serif;
+    font-family: "McLaren", sans-serif;
     font-weight: 300;
     color: #505050;
 }
@@ -57,6 +58,13 @@ form{
    margin-top: 30px;
    align-items: center;
    justify-content: center;
+}
+
+.contenedor-input{
+    display: flex;
+    flex-direction: column;
+    color:#AF473E;
+    font-family: "McLaren", sans-serif;
 }
 
 input{
@@ -100,17 +108,53 @@ input{
     gap: 15px;
 }
 
-.tarjeta{
-    background-color: #C2F261;
+.tarjeta {
+    position: relative;
     width: 200px;
     height: 130px;
+    perspective: 1000px; /* Necesario para efecto 3D */
     border-radius: 25px;
-    padding: 10px;
-    margin: 0;
-    text-align: center;
-    align-content: center;
-    overflow: scroll;
 }
+
+.cara {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    font-family: "McLaren", sans-serif;
+    box-sizing: border-box;
+    transition: transform 0.6s ease;
+    overflow-wrap: break-word;
+    word-break: break-word;
+    text-align: center;
+}
+
+.frente {
+    background-color: #C2F261;
+    transform: rotateY(0deg);
+    z-index: 2;
+}
+
+.trasera {
+    background-color: #AF473E;
+    color: white;
+    transform: rotateY(180deg);
+}
+
+.tarjeta:hover .frente {
+    transform: rotateY(180deg);
+}
+
+.tarjeta:hover .trasera {
+    transform: rotateY(360deg);
+}
+
+
 
 ::-webkit-scrollbar{
   width: 4px;
